<resources>
    <string name="app_name">로켓런처</string>
    <string name="home">홈</string>
    <string name="person">사람</string>
    <string name="message">메시지</string>
    <string name="mypage">마이페이지</string>
    <string name="employment">채용</string>

    <string name="new_message">새 메시지</string>
    <string name="enter_message">메시지 입력</string>
    <string name="receiver">받는 사람</string>
    <string name="connected_person">연결된 사람</string>
    <string name="logout">로그아웃</string>
</resources>